--- a/src/pages/userPage/Approvers/Approvers.less
+++ b/src/pages/userPage/Approvers/Approvers.less
@@ -57,7 +57,7 @@
 }
 
 .cardP {
-  height: 25px;
+  height: 8px;
 }
 
 .titleText {
